@@ -12,6 +12,7 @@ build_requires:
   Tags::Output::Indent: 0
   Test::More: 0
   Test::NoWarnings: 0
+  Unicode::UTF8: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.59
 distribution_type: module
