@@ -1,4 +1,5 @@
 0.04
+ - Add lang() and text() accessor for translations.
 
 0.03 2024-05-02T15:25:55+02:00
  - Add tags_after() accessor.
